--- a/game.html
+++ b/game.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="site-contains/styles/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Kamen, Papir, Makaze</h1>
+    <p>Welcome to the game.</p>
+    <p>Here, you will play against me in the age-old game of kamen, papir, makaze <em>(aka: rock, paper, sciscors)</em>.</p>
+    <p><b>Who am I?</b></p>
+    <p>I am what's known as the people's champ. I have played thousands of games... and yet, I am undefeated.</p>
+    <p><b>The rules?</b></p>
+    <p>They're simple. The first one to win 3 rounds wins the game.</p>
+    <p><b>Give me your best shot:</b></p>
+    <div class="form-container">
+        <form id="rpc">
+            <input type="radio" id="rock" name="rpc" value="rock" required>
+            <label for="rock">Rock</label>
+            <input type="radio" id="paper" name="rpc" value="paper" required>
+            <label for="rock">Paper</label>
+            <input type="radio" id="sciscors" name="rpc" value="sciscors" required>
+            <label for="rock">Sciscors</label><br>
+            <br>
+            <input type="button" id="rpc-submit" value="Submit" />
+        </form>
+    </div>
+    <p id=""></p>
 </body>
+<script src="site-contains/js/game-functions.js"></script>
 </html>
