Update game.html to include more placeholders

--- a/game.html
+++ b/game.html
@@ -28,7 +28,10 @@
             <input type="button" id="rpc-submit" value="Submit" />
         </form>
     </div>
-    <p id=""></p>
+    <p id="user-response-output"></p>
+    <p id="computer-response-output"></p>
+    <p id="round-winner"></p>
+    <p id="game-winner"></p>
 </body>
 <script src="site-contains/js/game-functions.js"></script>
 </html>
