Update title on index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="site-contains/styles/style.css">
     <script src="site-contains/js/game-functions.js" defer></script> <!-- note: without 'defer' here, this will load before the DOM is loaded (so it won't work correctly) -->
-    <title>Kamen, Papir, Makaze</title>
+    <title>Kamen, Papir, Makaze!</title>
 </head>
 <body>
     <h1>Kamen, Papir, Makaze</h1>
